--- a/ASP.NET/App_GlobalResources/Resource.resx
+++ b/ASP.NET/App_GlobalResources/Resource.resx
@@ -166,7 +166,7 @@
     <value>Загрузка</value>
   </data>
   <data name="Home_Page" xml:space="preserve">
-    <value>Стартовая страница</value>
+    <value>Меню</value>
   </data>
   <data name="Error_Occurred" xml:space="preserve">
     <value>Произошла ошибка</value>
